# ai-infra-capacity-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.agents/skills/ai-infra-capacity-planner/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: api-or-interface-extension.md  feature-development.md  test-driven-feature-development.md
.claude/homunculus/instincts/inherited/: ai-infra-capacity-planner-instincts.yaml
.claude/skills/ai-infra-capacity-planner/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: ci.yml
app/: __init__.py  demo_data.py  domain.py  engine.py  main.py  repository.py  schemas.py
data/: accelerator_profiles.yaml
docs/: architecture.md  assumptions-and-guardrails.md  calibration-method.md
docs/testing/: browser-qa.md  capacity-api.tdd.md  capacity-engine.tdd.md  capacity-integration.tdd.md  capacity-interface.tdd.md  demo-data.tdd.md
static/: app.js  styles.css  theme.css
templates/: index.html
tests/: test_api.py  test_demo_data.py  test_engine.py  test_integration_workflow.py  test_interface_contract.py  test_repository.py
